# barber-appointment-website

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: playwright.yml
backend/: .env  Dockerfile  README.MD  alembic.ini  app.py  dependencies.py  list_users.py  models.py  pyproject.toml  schemas.py  seed_users.py
backend/alembic/: env.py
backend/alembic/versions/: 7288f83d2004_criacao_inicial_das_tabelas.py
backend/routers/: agendamentos.py  auth.py  barbeiros.py  clientes.py  notificacoes.py  servicos.py  usuarios.py
frontend/: .dockerignore  .env.exemplo  .gitignore  Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/.github/workflows/: playwright.yml
frontend/playwright/: playwright.config.ts  tsconfig.json
frontend/playwright/pages/: LoginPage.ts  RegisterPage.ts
frontend/playwright/tests/: login.spec.ts  register.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/lib/components/: FacebookLoginButton.tsx  googleLoginButton.tsx  navBar.tsx
frontend/src/lib/routes/: routesApp.tsx
frontend/src/screens/agendamento/: appointment.css  appointment.tsx
frontend/src/screens/agendar/: agendar.css  agendar.tsx
frontend/src/screens/cadastrar/: cadastrarBarbeiro.css  cadastrarBarbeiro.tsx
frontend/src/screens/edit/: editProfile.css  editProfile.tsx
frontend/src/screens/historico/: historyPage.css  historyPage.tsx
frontend/src/screens/home/: home.css  home.tsx
frontend/src/screens/login/: loginPage.css  loginPage.tsx
frontend/src/screens/profile/: profilePage.css  profilePage.tsx
frontend/src/screens/registro/: registerPage.css  registerPage.tsx
infra/: nginx.conf
(+5 files in other folders)
